fix: 'flex-wrap'을 이용해 다수의 자동차도 시각적으로 표시할 수 있도록 수정

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -104,7 +104,7 @@
 }
 
 .car-name-box {
-  width: 96px;
+  width: 100px;
   height: 36px;
   background: #f5f5f5;
   border-radius: 4px;
@@ -122,4 +122,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+#racing-cars {
+  display: flex;
+  flex-wrap: wrap;
+  width: 954px;
+  margin: 0 auto;
 }
